syntax = "proto2";

package backup.info.pb;
option go_package = "./pb;backupInfo_pb";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message backupInfo {
  map<string,bool> idHashPin = 1;
  map<string,string> idHashUnpin = 2;
  repeated string targetPeerList = 3;
}